Updates for JPMS
* Update JPMS configuration
* Move test packages